tests/plugin_test/expected/044_crash.php.expected
src/044_crash.php:5 PhanSyntaxError Fallback parser diagnostic error: '}' expected.
